--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -167,7 +167,9 @@ p:last-child { margin-bottom: 0; }
 #tm-section-2 {	background-image: url(../img/strip-bg-02.jpg); }
 #tm-section-3 {	background-image: url(../img/strip-bg-03.jpg); }
 #tm-section-4 {	background-image: url(../img/strip-bg-04.jpg); }
-#tm-section-5 {	background-image: url(../img/strip-bg-05.jpg); }
+#tm-section-5 {	
+	height: 120%;
+	background-image: url(../img/strip-bg-05.jpg); }
 .tm-footer { 
 	background-image: url(../img/strip-bg-05.jpg);
 	font-weight: 300;
